# gemini-streamlit

./: Dockerfile  README.md  app.py  make_requirements.sh  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
